--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,15 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "strictNullChecks": false,
+    "skipLibCheck": true,
+    "target": "es2016",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "types"
     ],
     "lib": [
-      "es2018",
+      "es2017",
       "dom"
     ]
   },
